<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_viewfavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_setNewFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/btn_setNewFavorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_favorite"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:hint="Enter new favorite"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/btn_setNewFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_setNewFavorite"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_showfavorite"
        app:layout_constraintEnd_toEndOf="@+id/btn_setNewFavorite"
        app:layout_constraintStart_toStartOf="@+id/btn_setNewFavorite"
        app:layout_constraintTop_toBottomOf="@+id/btn_setNewFavorite" />

    <TextView
        android:id="@+id/tv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_currentfavorite"
        app:layout_constraintEnd_toEndOf="@+id/et_favorite"
        app:layout_constraintStart_toStartOf="@+id/et_favorite"
        app:layout_constraintTop_toBottomOf="@+id/et_favorite" />
</androidx.constraintlayout.widget.ConstraintLayout>