<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnGetStationData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etStationNameData" />

    <RadioButton
        android:id="@+id/rbFavoriteStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/rdo_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/btnGetStationData"
        app:layout_constraintEnd_toStartOf="@+id/btnGetStationData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGetStationData" />

    <TextView
        android:id="@+id/tvStationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_station"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStationData" />

    <EditText
        android:id="@+id/etStationNameData"
        android:layout_width="359dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Enter Station Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/lv_TrainsView"
        android:layout_width="405dp"
        android:layout_height="329dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_goTO" />

    <Button
        android:id="@+id/btn_goTO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_goTo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStationName" />

</androidx.constraintlayout.widget.ConstraintLayout>